fixed mobile alignment for header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,7 +19,7 @@
 
 @media (max-width: 1000px) {
   .header {
-    padding-top: 15px;
+    padding-top: 10px;
     font-size: 6.4vw;
   }
 }
